# atlassian-api-py

./: .aion.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  TODOS.md  noxfile.py  pyproject.toml  release.py  release.sh  requirements-dev.txt  setup.py
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aion.yml  codeql-analysis.yml  codeql.yml  docs-preview.yml  labeler.yml  main.yml  pre-commit.yml  publish-pypi.yml  release-drafter.yml  run-linter.yml  run-pylint.yml  test.yml
atlassian/: __init__.py  _version.py  bitbucket.py  client.py  config.ini  config.py  confluence.py  error.py  jira.py  logger.py
docs/: atlassian.rst  conf.py  copyright.rst  getting-started.rst  index.rst  installation.rst  modules.rst  requirements.txt  usage.rst
tests/: __init__.py  config.ini  test_bitbucket.py  test_client.py  test_confluence.py  test_error.py  test_jira.py  test_logger.py
